--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -5,6 +5,11 @@
 # command line flags, in order to actually get any replicas started. That
 # command requires that a docker swarm is already running in order to function.
 
+# sudo docker stack deploy -c docker-compose.yml nodes
+# sudo docker stack deploy nodes --compose-file docker-compose.yml
+
+# sudo docker stack rm nodes
+
 version: "3"
 services:
   kademliaNodes:
@@ -23,8 +28,8 @@ services:
         delay: 5s
         max_attempts: 3
         window: 10s
-#    ports:
-#      - "4000:80"
+    ports:
+      - "4000:80"
     networks:
       - kademlia_network
       
