--- a/src/pkg/mod/github.com/!simon!berghem/mobile-distributed-system@v0.0.0-20220914103140-c121377509bf/Dockerfile
+++ b/src/pkg/mod/github.com/!simon!berghem/mobile-distributed-system@v0.0.0-20220914103140-c121377509bf/Dockerfile
@@ -1,13 +1,15 @@
 FROM golang:latest
 
-# WORKDIR $GOPATH/src/github.com/mobile-distributed-system
-# RUN apt update
-# COPY go.mod .
-# RUN go mod download
-# COPY . .
+RUN echo "hello world"
+
+WORKDIR $GOPATH/labCode/github.com/mobile-distributed-system
+RUN apt update
+COPY go.mod .
+RUN go mod download
+COPY . .
 EXPOSE 80/udp
-# RUN go run src/main.go
-# CMD  ["./main"]
+RUN go run src/main.go
+CMD  ["./main"]
 
 # Add the commands needed to put your compiled go binary in the container and
 # run it when the container starts.
