--- a/.gitignore
+++ b/.gitignore
@@ -17,8 +17,8 @@
 
 # Dependency directories (remove the comment below to include it)
 # vendor/
-*.src/pkg
-*.src/bin
+*.src/pkg/
+*.src/bin/
 
 # Go workspace file
 go.work
